# pondernet-adaptive-latent-reasoning

./: .gitignore  AGENTS.md  MIGRATION.md  README.md  main.py  pull_checkpoints.sh  pyproject.toml
Poster_NLP/: poster.tex  suvs_poster.bib
Poster_NLP/paperfigures/: latent_reasoning_schematic.tex
SIM-CoT/: README.md
SIM-CoT/CODI/: smoke_pondernet.py  test.py
adaptive-vectors/: AGENTS.md  IMPLEMENTATION.md  README.md  RESULTS.md  smoke_optionb.py  test.py  train.py
adaptive-vectors/docs/: synthetic-density-design.md
adaptive-vectors/scripts/: analyze_synth_density.py  eval_gpt2_gsm8k_optionb.sh  eval_gpt2_gsm8k_pondernet.sh  eval_synth_density.sh  fetch_simcot_decoder.py  gcp_setup.sh  gen_synthetic_density.py  ob_eval_sweep.sh  ob_probe.sh  ob_smoke.sh  ob_step3_coldcoarse.sh  profile_batch_size.py  train_gpt2_gsm8k_optionb.sh  train_gpt2_gsm8k_optionb_cold.sh  train_gpt2_gsm8k_optionb_warmcoarse.sh  train_gpt2_gsm8k_pondernet.sh  train_gpt2_synth_density.sh
adaptive-vectors/src/: model.py
adaptive-vectors/tests/: test_analyze_synth_density.py  test_gen_synthetic_density.py  (+1 more)
baselines/: requirements.txt  requirements_clean.txt
docs/: experiments.md  exploration.md  methods-comparison.md  parameters.md  pipeline.md  runs.md
k-classifier/: .gitignore  AGENTS.md  README.md  requirements.txt
paper/: custom.bib  main.bbl  main.tex  paper.md  paper.tex
paper_en/: main.tex  paper.md
pondernet/: .gitattributes  README.md  cache_features.py  requirements.txt  smoke_pondernet.py  test.py  train.py
poster/: poster.tex
poster_en/: poster.tex
(+202 files in other folders)
