[project]
name = "tpnlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.7.0",
    "datasets==3.6.0",
    "numpy==2.2.6",
    "peft==0.15.2",
    "safetensors==0.5.3",
    "tensorboardx==2.6.2.2",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.52.4",
]
