[project]
name = "tpnlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.7.0",
    "datasets==3.6.0",
    "matplotlib>=3.11.0",
    "numpy==2.2.6",
    "peft==0.15.2",
    "safetensors==0.5.3",
    "scipy>=1.18.0",
    "tensorboard>=2.21.0",
    "tensorboardx==2.6.2.2",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.52.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

# The default PyPI torch wheel is built against CUDA 12.6, which ships no kernels for
# Blackwell (sm_120 - the RTX PRO 6000 on GCE's G4 VMs): every CUDA op dies with
# "no kernel image is available for execution on the device". The cu128 wheel of the
# same torch version covers sm_75 through sm_120, so it also still runs the L4 (sm_89).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
